Sun Feb 28 22:26:21 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (do_map_bus): Don't dump functions 1--7 if not flagged
	as a multi-function device, because several single-function devices
	don't decode the function bits at all.

Sun Feb 14 23:48:22 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile (install): Don't use "-o root -g root" for installation
	since it breaks on machines where programs are not installed by root.
	Reported by Richard Gooch <rgooch@atnf.csiro.au>

Tue Feb  9 15:54:39 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_bases): Use new address masking macros and pciaddr_t.

	* lib/pci.h: Using pciaddr_t for bus addresses, which are 32-bit
	or 64-bit depending on CPU.

	* lib/pci.h (PCI_ADDR_MEM_MASK): Added macros for address masks
	according to bus address width.

Thu Jan 28 20:54:16 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.99.4.

	* lspci.c: Capability list parser now recognizes both AGP
	registers and PCI Power Management registers (the latter
	is mainly guesswork based on DEC/Intel 21153 bridge specs
	since I don't have the PCI Power Management document).

	* lspci.c: Replaced numerous occurences of (x & flag) ? '+' : '-'
	by FLAG macro.

	* lspci.c: Added bridge checks to bus mapping code.

Wed Jan 27 14:59:16 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c: Implemented bus mapping mode (-M).

	* lspci.c (scan_devices): Split to scan_devices() and scan_device().
	(show): Split to show() and show_device().

	* lib/access.c (pci_init): When a->method == PCI_ACCESS_AUTO,
	set it to the real access method afterwards.

Mon Jan 25 23:46:13 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lib/generic.c (pci_generic_fill_info): If in buscentric mode,
	don't check PCI_COMMAND for I/O and memory enables.

Mon Jan 25 21:28:49 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile: Added target `release' which substitutes new version
	number to .spec, .lsm and README. Also rewrote target `dist'.

	* Released as 1.99.3.