@@ -1,4 +1,4 @@
-This package contains the Linux PCI Utilities, version 1.99.4-alpha.
+This package contains the Linux PCI Utilities, version 1.99.5-alpha.
 
 Copyright (c) 1997--1999 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
 
@@ -53,5 +53,4 @@ notes and other news: http://atrey.karlin.mff.cuni.cz/~mj/pciutils.html.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 TODO:
-	- lspci: "scan hard" function
 	- lib: "syscall" access method
